# fintools

./: .gitignore  Cargo.toml  README.md  build.cmd  build.rs
data/: symbol_cache.txt  symbol_cache2.txt  test.txt
ressources/: build.cmd  fintools_starter.cmd  fintools_starter.ps1
src/: finlibs.rs  main.rs
src/finlibs/: cache.rs  envs.rs  finance.rs  settings.rs  utils.rs
