[package]
name = "fintools"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
yahoo_finance_api = "1.3.0"
tokio-test = "0.4.2"
rayon = "1.5.3"
eframe = "0.19.0"
phf = { version = "0.11.1", features = ["macros"] }
rfd = "0.10.0"
lazy_static = "1.4.0"
chrono = "0.4.22"
regex = "1.6.0"
image = "0.24.4"
config = "0.13.2"
toml = "0.5.9"

[build-dependencies]
winres = "0.1"
