[package]
name = "fintools"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = ">=1.0, <2.0.0"
serde = { version = ">=1.0, <2.0.0", features = ["derive"] }
yahoo_finance_api = ">=2.0, <3.0.0"
tokio-test = ">=0.4, <1.0.0"
rayon = ">=1.7, <2.0.0"
eframe = ">=0.21, <0.22"
phf = { version = ">=0.11, <1.0.0", features = ["macros"] }
rfd = ">=0.10, <1.0.0"
lazy_static = ">=1.4, <2.0.0"
chrono = ">=0.4, <1.0.0"
regex = ">=1.8, <2.0.0"
image = ">=0.24, <1.0.0"
config = ">=0.13, <1.0.0"
toml = ">=0.5, <1.0.0"
path-clean = ">=0.1, <1.0.0"

[build-dependencies]
winres = ">=0.1, <1.0.0"
